--- a/index.html
+++ b/index.html
@@ -111,18 +111,6 @@ body {
     color: #aaa;
 }
 
-.random-game {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background: #333;
-    border-radius: 10px;
-    padding: 15px;
-    text-align: center;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
-    font-size: 1.2em;
-}
-
 #redirectButton {
     position: fixed;
     bottom: 20px;
@@ -146,6 +134,9 @@ body {
     text-align: center;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
     font-size: 1.2em;
+}
+.random-game:hover {
+    scale: 0.2;
 }
 
 .random-game a {
