--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             width: 100%;
             height: 100%;
             z-index: 0; /* Send it to the back */
+            pointer-events: none; /* Allow mouse events to pass through */
         }
 
         .topbar {
@@ -92,6 +93,7 @@
             border-radius: 50%;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
             margin: 10px 0;
+            background: black;
         }
 
         .play-button-container {
