--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             border-radius: 50%;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
             margin: 10px 0;
-            background: black;
+            background: #f5f5f5;
         }
 
         .play-button-container {
