--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             left: 0;
             width: 100%;
             height: 100%;
-            z-index: 0; /* Send it to the back */
-            pointer-events: none; /* Allow mouse events to pass through */
+            z-index: 10; 
+            pointer-events: none; 
         }
 
         .topbar {
