--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             border-radius: 50%;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
             margin: 10px 0;
-            background: #f5f5f5;
+            background: gray;
         }
 
         .play-button-container {
