--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
             left: 0;
             width: 100%;
             height: 100%;
-            z-index: 10; 
+            z-index: 0; /* Ensure particles are behind other content */
+            pointer-events: none; /* Allow mouse events to pass through */
         }
+
 
         .topbar {
             background-color: rgba(34, 34, 34, 0.9);
