--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         .content p {
             font-size: 1.5em;
             margin: 5px 0;
+            pointer-events: none;
         }
 
         #icon {
@@ -103,6 +104,7 @@
             justify-content: center;
             align-items: center;
             margin: 5px 0;
+            pointer-events: none;
         }
 
         .play-button {
