--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
             display: flex;
             flex-direction: column;
             position: relative;
-            overflow: hidden; /* Prevent overflow */
-            pointer-events: none;
+            overflow: hidden;
         }
 
         #particles-js {
@@ -28,9 +27,8 @@
             left: 0;
             width: 100%;
             height: 100%;
-            z-index: 0; /* Ensure particles are behind other content */
+            z-index: 0;
         }
-
 
         .topbar {
             background-color: rgba(34, 34, 34, 0.9);
@@ -80,14 +78,12 @@
             justify-content: center;
             padding: 20px;
             text-align: center;
-            z-index: 1; /* Bring content to the front */
-            pointer-events: none;
+            z-index: 1;
         }
 
         .content p {
             font-size: 1.5em;
             margin: 5px 0;
-            pointer-events: none;
         }
 
         #icon {
@@ -104,7 +100,6 @@
             justify-content: center;
             align-items: center;
             margin: 5px 0;
-            pointer-events: none;
         }
 
         .play-button {
@@ -130,7 +125,7 @@
             color: #aaa;
         }
 
-        #redirectButton, .random-game {
+        #random-game {
             position: fixed;
             bottom: 20px;
             background: #333;
@@ -140,23 +135,11 @@
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
             font-size: 1.2em;
             color: white;
-            z-index: 1; /* Bring button to the front */
+            z-index: 1;
+            display: none; /* Initially hidden */
         }
 
-        .random-game {
-            right: 20px;
-        }
-
-        .random-game:hover {
-            transform: scale(1.05);
-        }
-
-        .random-game a {
-            color: white;
-            text-decoration: none;
-        }
-
-        .random-game img {
+        #random-game img {
             width: 200px;
             height: 200px;
             border-radius: 5px;
@@ -178,7 +161,7 @@
     </style>
 </head>
 <body>
-    <div id="particles-js"></div> <!-- Particles.js container -->
+    <div id="particles-js"></div>
 
     <div class="topbar">
         <h1>Void's Games</h1>
@@ -202,8 +185,8 @@
 
     <div class="footer"></div>
 
-    <div id="random-game" class="random-game" style="display: none;">
-        <a id="random-game-link" href="">
+    <div id="random-game">
+        <a id="random-game-link" href="#">
             <img id="random-game-image" src="" alt="Random Game">
             <h3 id="random-game-title"></h3>
             <p id="random-game-description"></p>
@@ -217,7 +200,6 @@
             console.log('callback - particles.js config loaded');
         });
 
-        // Array of games
         const games = [
             {
                 url: 'game.html?game=Monkey%20Mart',
@@ -257,22 +239,18 @@
             }
         ];
 
-        // Function to randomly select a game
         function selectRandomGame() {
             const randomIndex = Math.floor(Math.random() * games.length);
             const selectedGame = games[randomIndex];
 
-            // Update the random game section with selected game details
             document.getElementById('random-game-link').href = selectedGame.url;
             document.getElementById('random-game-image').src = selectedGame.image;
             document.getElementById('random-game-title').innerText = selectedGame.title;
             document.getElementById('random-game-description').innerText = selectedGame.description;
 
-            // Show the random game section
             document.getElementById('random-game').style.display = 'block';
         }
 
-        // Call the function when the page loads
         window.onload = function() {
             selectRandomGame();
             particlesJS.load('particles-js', 'particles.json', function() {
@@ -281,24 +259,19 @@
         };
 
         document.getElementById('redirectButton').addEventListener('click', function() {
-            // Create a new blank page
             const newWindow = window.open('about:blank');
-
-            // Set styles for the new window's document
             newWindow.document.body.style.margin = '0';
             newWindow.document.body.style.padding = '0';
-            newWindow.document.body.style.height = '100vh'; // Full height
-            newWindow.document.body.style.width = '100vw';  // Full width
-            newWindow.document.body.style.overflow = 'hidden'; // Prevent scrolling
+            newWindow.document.body.style.height = '100vh';
+            newWindow.document.body.style.width = '100vw';
+            newWindow.document.body.style.overflow = 'hidden';
 
-            // Create an iframe element
             const iframe = newWindow.document.createElement('iframe');
-            iframe.src = window.location.href; // Use the current URL
+            iframe.src = window.location.href;
             iframe.style.width = '100%';
             iframe.style.height = '100%';
             iframe.style.border = 'none';
 
-            // Append the iframe to the new window's document
             newWindow.document.body.appendChild(iframe);
         });
     </script>
