--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             left: 0;
             width: 100%;
             height: 100%;
-            z-index: 0; /* Send it to the back */
+            z-index: 0; 
+            pointer-events: none
         }
 
         .topbar {
