--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         }
 
         .topbar {
-            background-color: rgba(34, 34, 34, 0.9);
+            background-color: #222;
             padding: 20px;
             text-align: center;
             border-bottom: 2px solid #444;
             position: sticky;
             top: 0;
-            z-index: 10; 
+            z-index: 1000;
         }
 
         .topbar h1 {
