--- a/About.html
+++ b/About.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Void's Games</title>
+    <script src="js/app.js" defer></script>
+    <script src="particles.js"></script>
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
