--- a/About.html
+++ b/About.html
@@ -20,6 +20,16 @@
             flex-direction: column;
         }
 
+        #particles-js {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 0; 
+            pointer-events: none
+        }
+
         .topbar {
             background-color: #222;
             padding: 20px;
