--- a/About.html
+++ b/About.html
@@ -108,6 +108,7 @@
             <a href="./About.html" class="nav-button2">About</a>
         </div>
     </div>
+        <div id="particles-js"></div> <!-- Particles.js container -->
     <div class="content">
         <p>Hey, this is a passion project I hope you enjoy.</p>
         <p>Send feedback, ideas, game requests, and bugs to this email: <a href="mailto:voidgenarator@gmail.com" class="email-link">voidgenarator@gmail.com</a></p>
