--- a/game.html
+++ b/game.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Void's Games</title>
+    <script src="js/app.js" defer></script>
+    <script src="particles.js"></script>
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
@@ -17,7 +19,17 @@
             display: flex;
             flex-direction: column;
         }
-
+        
+        #particles-js {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 0; 
+            pointer-events: none
+        }
+        
         .topbar {
             background-color: #222;
             padding: 20px;
@@ -129,6 +141,7 @@
             <a href="about.html" class="nav-button">About</a>
         </div>
     </div>
+    <div id="particles-js"></div> <!-- Particles.js container -->
     <div class="content">
         <div class="iframe-container">
             <iframe id="gameIframe" src="" frameborder="0"></iframe>
