--- a/Games.html
+++ b/Games.html
@@ -138,22 +138,25 @@
         }
 
         .search-bar {
-            margin: 15px auto; /* Center the search bar */
-            text-align: center; /* Center align the input */
+            margin: 30px auto; 
+            text-align: center; 
+            background-color: #444;
         }
 
         .search-input {
-            padding: 10px;
-            width: 200px;
+            padding: 30px;
+            width: 400px;
             border: none;
             border-radius: 20px;
             outline: none;
             font-size: 1em;
+            color: white;
             transition: background-color 0.3s;
         }
 
         .search-input:focus {
             background-color: #444;
+            color: white;
         }
     </style>
 </head>
