--- a/Games.html
+++ b/Games.html
@@ -138,13 +138,12 @@
         }
 
         .search-bar {
-            margin: 30px auto; 
+            margin: 25px auto; 
             text-align: center; 
-            background-color: #444;
         }
 
         .search-input {
-            padding: 30px;
+            padding: 25px;
             width: 400px;
             border: none;
             border-radius: 20px;
@@ -152,6 +151,8 @@
             font-size: 1em;
             color: white;
             transition: background-color 0.3s;
+            background-color: #444;
+            color: white;
         }
 
         .search-input:focus {
