--- a/Games.html
+++ b/Games.html
@@ -140,6 +140,7 @@
         .search-bar {
             margin: 25px auto; 
             text-align: center; 
+            color: white;
         }
 
         .search-input {
