--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
             <a href="./" class="nav-button2">Home</a>
             <a href="./Games.html" class="nav-button">Games</a>
             <a href="./About.html" class="nav-button">About</a>
+            <a href="./chat.html" class="nav-button">Chat Room</a>
         </div>
     </div>
 
