--- a/Games.html
+++ b/Games.html
@@ -170,6 +170,7 @@
             <a href="./" class="nav-button">Home</a>
             <a href="./Games.html" class="nav-button2">Games</a>
             <a href="./About.html" class="nav-button">About</a>
+            <a href="./chat.html" class="nav-button">Chat Room</a>
         </div>
     </div>
     
