--- a/game.html
+++ b/game.html
@@ -139,6 +139,7 @@
             <a href="index.html" class="nav-button">Home</a>
             <a href="games.html" class="nav-button">Games</a>
             <a href="about.html" class="nav-button">About</a>
+            <a href="./chat.html" class="nav-button">Chat Room</a>
         </div>
     </div>
     <div id="particles-js"></div> <!-- Particles.js container -->
