--- a/About.html
+++ b/About.html
@@ -106,6 +106,7 @@
             <a href="./" class="nav-button">Home</a>
             <a href="./Games.html" class="nav-button">Games</a>
             <a href="./About.html" class="nav-button2">About</a>
+            <a href="./chat.html" class="nav-button">Chat Room</a>
         </div>
     </div>
         <div id="particles-js"></div> <!-- Particles.js container -->
