--- a/chat.html
+++ b/chat.html
@@ -128,7 +128,7 @@
             <a href="./" class="nav-button">Home</a>
             <a href="./Games.html" class="nav-button">Games</a>
             <a href="./About.html" class="nav-button2">About</a>
-            <a href="./chat.html" class="nav-button2">Chat Room</a>
+            <a href="./chat.html" class="nav-button">Chat Room</a>
         </div>
     </div>
     <div id="chatContainer">
