--- a/chat.html
+++ b/chat.html
@@ -146,7 +146,7 @@
     </div>
 
     <script>
-        const serverUrl = "https://talk.absalt.com/";
+        const serverUrl = "https://talk.absalt.com";
         let currentRoom = "global";
         let username = "";
         const messagesDiv = document.getElementById("messages");
