--- a/chat.html
+++ b/chat.html
@@ -127,8 +127,8 @@
         <div class="nav-buttons">
             <a href="./" class="nav-button">Home</a>
             <a href="./Games.html" class="nav-button">Games</a>
-            <a href="./About.html" class="nav-button2">About</a>
-            <a href="./chat.html" class="nav-button">Chat Room</a>
+            <a href="./About.html" class="nav-button">About</a>
+            <a href="./chat.html" class="nav-button2">Chat Room</a>
         </div>
     </div>
     <div id="chatContainer">
