--- a/chat.html
+++ b/chat.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="js/app.js" defer></script>
+    <script src="particles.js"></script>
     <title>Chat Room</title>
     <style>
         body {
@@ -24,7 +26,7 @@
             width: 100%;
             height: 100%;
             z-index: 0; 
-            pointer-events: none;
+            pointer-events: none
         }
 
         .topbar {
@@ -121,7 +123,9 @@
     </style>
 </head>
 <body>
-    <div id="particles-js"></div> <!-- Particles.js container -->
+    <div id="particles-js"></div>
+
+
     <div class="topbar">
         <h1>Chat Room</h1>
         <div class="nav-buttons">
