--- a/chat.html
+++ b/chat.html
@@ -25,7 +25,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            z-index: 0; 
+            z-index: 0;
             pointer-events: none;
         }
 
@@ -72,11 +72,11 @@
         }
 
         #chatContainer {
-            width: 90%; /* Set to occupy 90% of viewport width */
-            max-width: 1600px; /* Ensures it doesn't exceed 1600px */
+            width: 90%;
+            max-width: 1600px;
             margin: 0 auto;
             position: relative;
-            z-index: 1; /* Ensure chat container is above particles */
+            z-index: 1;
             background-color: rgba(34, 34, 34, 0.8);
             border-radius: 8px;
             padding: 20px;
@@ -157,6 +157,7 @@
         const roomInfo = document.getElementById("roomInfo");
         const sendButton = document.getElementById("sendButton");
         const messageInput = document.getElementById("messageInput");
+        let eventSource;
 
         // Join the global room initially
         joinRoom("global");
@@ -222,10 +223,15 @@
         function joinRoom(roomId) {
             currentRoom = roomId;
             roomInfo.innerHTML = `Connected to room: <strong>${currentRoom}</strong>`;
-            messagesDiv.innerHTML = "";
+            messagesDiv.innerHTML = ""; // Clear previous messages
+
+            // Close the previous EventSource connection if it exists
+            if (eventSource) {
+                eventSource.close();
+            }
 
             // Set up the EventSource to listen only for messages in the current room
-            const eventSource = new EventSource(`${serverUrl}/api/v2/tunnel/stream?id=${currentRoom}&subChannel=main`);
+            eventSource = new EventSource(`${serverUrl}/api/v2/tunnel/stream?id=${currentRoom}&subChannel=main`);
 
             eventSource.onmessage = (event) => {
                 const message = document.createElement("div");
